# phone-parser

./: README.md  pyproject.toml
src/: main.py
src/domain/: interactor.py  organization_repository.py  page_parser.py
src/domain/entities/: organization.py
src/implementations/: mock_organization_repository.py  playwright_page_parser.py
