[tool.poetry]
name = "hands"
version = "0.1.0"
description = ""
authors = ["Bergutov Ruslan <ruslanbergutov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
playwright = "^1.29.1"
phonenumbers = "^8.13.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

